--- a/style.css
+++ b/style.css
@@ -6,10 +6,21 @@
 h1{
     background-color: yellow;
     text-align: center;
+    border-style: solid;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+ul{
+    border-style: solid;
+    background-color: yellow;
+    text-align: center;
+    margin-left: 150px;
+    margin-right: 150px;
 }
