--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 body{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: antiquewhite;
+    margin: 0;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 ul li a{
@@ -24,3 +32,8 @@ ul li a{
     align-items: center;
 }
 
+.footer{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+}
