--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: antiquewhite;
+    min-height: 100vh;
     margin: 0;
 }
 
@@ -15,9 +16,11 @@ main{
 
 ul li a{
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     text-decoration: none;
+    list-style-type: none;
     color: black;
+    padding: 5px;
 }
 
 .header{
@@ -33,12 +36,12 @@ ul li a{
     display: flex;
     justify-content: center;
     align-items: center;
-    list-style-type: none;
 }
 
 .footer p{
     display: flex;
     flex-direction: column;
+    flex: 1;
     background-color: grey;
     margin: auto;
 
