--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: antiquewhite;
     min-height: 100vh;
     margin: 0;
@@ -12,7 +10,6 @@ body{
 main{
     display: flex;
     flex-direction: column;
-    flex: 1;
 }
 
 ul li a{
@@ -44,6 +41,6 @@ ul li a{
     flex-direction: column;
     flex: 1;
     background-color: grey;
-    margin: auto;
+    margin: 0;
 
 }
