--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
 body{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: antiquewhite;
     min-height: 100vh;
     margin: 0;
+    border: 20px solid black;
 }
 
 main{
     display: flex;
     flex-direction: column;
-    flex: 1;
 }
 
 ul li a{
@@ -28,7 +26,7 @@ ul li a{
     justify-content:center ;
     background-color: grey;
     border-radius: 25px;
-    margin-top: 25px;
+    margin-top: 55px;
     margin-bottom: 25px;
     }
 
@@ -43,6 +41,6 @@ ul li a{
     flex-direction: column;
     flex: 1;
     background-color: grey;
-    margin: auto;
+    margin: 0;
 
 }
